Top panel styled Fixed layout issues

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,6 +13,10 @@
   position: fixed;
 }
 .body-content {
-  margin-left:70px;
+  padding-left: 85px;
+  padding-right: 15px;
   width: 100%;
+}
+.topmenu {
+  margin-left: 70px;
 }
