--- a/src/app/components/nav-menu/nav-menu.component.scss
+++ b/src/app/components/nav-menu/nav-menu.component.scss
@@ -23,6 +23,7 @@ li.link-active a:focus {
   right: 0;
   z-index: 1;
   height: 100%;
+  width: 70px;
 }
   .navbar {
     border-radius: 0px;
